--- a/css/main.css
+++ b/css/main.css
@@ -57,22 +57,22 @@ html{
 	scroll-behavior:smooth;
 }
 
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
 	width: 8px;
 }
 
-body::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
 	background-color: #3d3d3d;
 	border-radius: 8px;
 	-webkit-border-radius: 8px;
 	border: 2px solid #FAFAFA;
 }
 
-body::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover {
 	background-color: #187DC7;
 }
 
-body::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
 	background: #FAFAFA;
 }
 
@@ -123,15 +123,35 @@ main {
 
 .button {
 	font-size: 1rem;
-	border-radius: 1rem;
-	background: var(--gradient);
-	box-shadow: var(--box-shadow);
+	border-radius: 2rem;
+	background: linear-gradient(90deg, #2D9CDB 0%, #14AAFF 100%);
+	box-shadow: 2px 2px 4px rgba(30, 35, 55, 0.14);
 	color: var(--white);
-	padding: 6px 24px;
+	padding: 10px 24px;
 	outline: none;
 	border: none;
 	cursor: pointer;
-	transition: all .5s ease;
+	transition: all .250s ease;
+}
+
+.button:hover {
+	box-shadow: 2px 2px 4px rgba(30, 35, 55, 0.5);
+}
+
+.input {
+	font-family: Montserrat, sans-serif;
+	padding: 12px;
+	background: var(--box-bg);
+	border: 2px solid #d3e3f9;
+	box-shadow: 1px 1px 8px rgba(30, 35, 55, .10);
+	border-radius: .5rem;
+	outline: none;
+	transition: all .250s ease-in-out;
+
+}
+
+.input:focus {
+	box-shadow: 2px 2px 8px rgba(30, 35, 55, .15);
 }
 
 .nav__link {
@@ -358,6 +378,7 @@ main {
 	transition: all .3s ease-in-out;
 	min-width: 260px;
 	flex: 1;
+	will-change: transform;
 }
 
 .services__row-item img {
@@ -378,6 +399,10 @@ main {
 .services__row-item--full{
 	max-width: calc(50% - 1rem);
 	flex: 0 1 auto;
+}
+
+.services__row-item--full .button {
+
 }
 
 .services__row-item--full .item__title {
@@ -407,11 +432,132 @@ main {
 	display: none;
 }
 
-.services__row-item.opened {
+
+.services__content {
 	position: absolute;
-	width: 575px;
-	z-index: 9;
-	height: fit-content;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	display: flex;
+
+}
+
+.services__content-item {
+	width: 50%;
+	height: 100%;
+	padding: 2rem 1.5rem 1.5rem;
+	text-align: center;
+	display: none;
+	opacity: 0;
+	visibility: hidden;
+	will-change: transform;
+	transition: all 1s ease-in-out;
+	overflow: auto;
+}
+
+.services__content-item .item__content {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.services__content-item .item__content li {
+	padding: .2rem 0;
+}
+
+.services__content-item .item__content .item__content-list {
+	text-align: left;
+	align-self: flex-start;
+	padding: 0 1rem 0 2rem;
+	list-style: circle;
+	margin-top: .5rem;
+}
+
+.services__content-item.active {
+	display: block;
+	opacity: 1;
+	width: 50%;
+	height: 100%;
+	position: absolute;
+	z-index: 2;
+	visibility: visible;
+	animation: fadeInFromNone .250s ease-in;
+}
+
+.services__content-item.tl.active  {
+	left: 0;
+	top: 0;
+}
+
+.services__content-item.tr {
+	right: 50%;
+}
+
+.services__content-item.tr.active  {
+	right: 50%;
+	top: 0;
+}
+
+.services__content-item.bl.active  {
+	left: 50%;
+	bottom: 0;
+
+}
+
+.services__content-item.br.active  {
+	right:  0;
+	bottom: 0;
+}
+
+.services__content-item .item__body {
+	animation: fadeInContent .250s ease-in;
+}
+
+.services__content-item .item__body .close__btn {
+	background: none;
+	outline: none;
+	border: none;
+	transform: rotate(45deg);
+	font-size: 2rem;
+	cursor: pointer;
+	color: var(--gray);
+	position: absolute;
+	top: .5rem;
+	right: 1rem;
+	transition: color .3s ease;
+}
+
+.services__content-item .item__body .close__btn:hover {
+	color: var(--text);
+}
+
+.services__content-item .item__title {
+	margin-bottom: 1rem;
+}
+
+/*FORM*/
+
+.form__group{
+	display: flex;
+	flex-wrap: nowrap;
+	gap: 1rem;
+	margin-bottom: 1rem;
+	justify-content: center;
+}
+
+.form__group label {
+	flex: 1;
+	display: flex;
+}
+
+.form__group-input {
+	flex: 1;
+	font-size: 14px;
+}
+
+.form__group-button {
+	align-self: center;
 }
 
 /*NEWS*/
@@ -554,9 +700,10 @@ main {
 
 .page__title-body .title {
 	font-size: 2rem;
-	font-weight: normal;
 	position: relative;
 	display: inline-block;
+	color: var(--white);
+	font-weight: 500;
 
 }
 
@@ -589,7 +736,7 @@ main {
 }
 .page__sidebar-nav__list li {
 	margin-bottom: .5rem;
-
+	min-width: 180px;
 
 }
 
@@ -598,12 +745,30 @@ main {
 }
 
 .page__sidebar-nav__list .nav__link {
-	padding: .2rem 0;
-	color: var(--gray);
+	padding: .2rem;
+	color: var(--text);
+	transition: all .250s ease-in-out;
+}
+
+.page__sidebar-nav__list .nav__link::after {
+	width: 2px;
+	height: 100%;
+	left: 0;
+	transition: all .250s ease-in-out;
+}
+
+.page__sidebar-nav__list .nav__link:hover {
+	color: var(--accent);
+	padding: .2rem 0 .2rem 1rem
 }
 
 .page__sidebar-nav__list .nav__link.active {
 	color: var(--accent);
+	padding: .2rem 0 .2rem 1rem
+}
+
+.page__sidebar-nav__list .nav__link.active  li {
+	padding: 0 .5rem;
 }
 
 
@@ -655,6 +820,8 @@ main {
 	margin-bottom: 1rem;
 	font-weight: 500;
 	cursor: pointer;
+	border-left: 2px solid;
+	border-left-color: var(--accent);
 }
 
 .page__accordion-content {
@@ -711,100 +878,12 @@ main {
 	flex: 1 0 calc(100% / 2);
 }
 
-.services__content {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	display: flex;
-
-}
-
-.services__content-item {
-	width: 50%;
-	height: 100%;
-	padding: 2rem 1.5rem 1.5rem;
-	text-align: center;
-	display: none;
-	opacity: 0;
-	visibility: hidden;
-	will-change: transform;
-	transition: all 1s ease-in-out;
-}
-
-.services__content-item .item__content {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-}
-
-.services__content-item.active {
-	display: block;
-	opacity: 1;
-	width: 50%;
-	height: 100%;
-	position: absolute;
-	z-index: 2;
-	visibility: visible;
-	animation: fadeInFromNone .5s ease-in-out;
-}
-
-.services__content-item.tl.active  {
-	left: 0;
-	top: 0;
-}
-
-.services__content-item.tr {
-	right: 50%;
-}
-
-.services__content-item.tr.active  {
-	right: 50%;
-	top: 0;
-}
-
-.services__content-item.bl.active  {
-	left: 50%;
-	bottom: 0;
-
-}
-
-.services__content-item.br.active  {
-	right:  0;
-	bottom: 0;
-}
-
-.services__content-item .item__body {
-	animation: fadeInContent .5s ease-in;
-}
-
-.services__content-item .item__body .close__btn {
-	background: none;
-	outline: none;
-	border: none;
-	transform: rotate(45deg);
-	font-size: 2rem;
-	cursor: pointer;
-	color: var(--gray);
-	position: absolute;
-	top: .5rem;
-	right: 1rem;
-	transition: color .3s ease;
-}
-
-.services__content-item .item__body .close__btn:hover {
-	color: var(--text);
-}
-
-.services__content-item .item__title {
-	margin-bottom: 1rem;
-}
 
 @keyframes fadeInContent {
 	0% {
 		display: none;
 		transform: scale(0);
+
 	}
 	80% {
 		display: block;
