--- a/css/main.css
+++ b/css/main.css
@@ -491,7 +491,8 @@ main {
   font-size: 2rem;
   font-weight: bold;
   color: var(--white);
-  text-shadow: 1px 4px 10px rgba(0, 0, 0, 0.25);
+  text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.774), 
+                -4px -4px 10px rgba(0, 0, 0, 0.692);
   letter-spacing: 1.2px;
 }
 
