--- a/css/main.css
+++ b/css/main.css
@@ -137,6 +137,11 @@ ul {
   padding: .5rem 0;
 }
 
+.tc {
+  text-align: center;
+}
+
+
 
 ul li::marker {
   color: var(--accent);
@@ -911,6 +916,37 @@ main {
 
 .page__sidebar-nav__list .nav__link.active li {
   padding: 0 0.5rem;
+}
+
+.page__info {
+  margin: 1rem 0px;
+}
+
+.page__info-heading {
+  margin-bottom: 1.5rem;
+}
+
+.page__info-row {
+  display: flex;
+  border-bottom: 1px solid #f5f5f5;
+}
+
+.page__info-col {
+  padding: .5rem 1rem;
+  width: 50%;
+}
+
+
+.page__info-col p {
+  margin: .5rem 0;
+}
+
+.page__info-col a {
+  color: var(--accent);
+}
+
+.page__info-title {
+  font-weight: 500;
 }
 
 /*TABLE*/
