--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -579,6 +579,7 @@ main {
 .services__row-item--full {
   max-width: calc(50% - 1rem);
   flex: 0 1 auto;
+  width: 100%;
 }
 
 .services__row-item--full .button {
@@ -599,6 +600,7 @@ main {
 .services__row {
   display: flex;
   flex-wrap: nowrap;
+  width: 100%;
 }
 
 .services__item-wrapper {
