--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -185,6 +185,16 @@ main {
   box-shadow: 2px 2px 4px rgba(30, 35, 55, 0.5);
 }
 
+.button:disabled {
+  background: linear-gradient(90deg, #ccc 0%, #ccc 100%);
+  transition: all 0.25s ease;
+  cursor: default;
+}
+
+.button:disabled:hover {
+  box-shadow: 2px 2px 4px rgba(30, 35, 55, 0.14);
+}
+
 .input {
   font-family: Montserrat, sans-serif;
   padding: 12px;
@@ -1150,11 +1160,23 @@ main {
   position: absolute;
   top: 0.5rem;
   right: 1rem;
+  z-index: 9;
   transition: color 0.3s ease;
 }
 
 .modal__content-item .item__body .close__btn:hover {
   color: var(--text);
+}
+
+.modal__content-item .item__message {
+  position: absolute;
+  inset: 0;
+  background-color: var(--white);
+  backdrop-filter: blur(10px);
+  display: none;
+  align-items: center;
+  justify-content: center;
+
 }
 
 @keyframes fadeInContent {
