--- a/assets/styles/media.css
+++ b/assets/styles/media.css
@@ -151,7 +151,7 @@
 /* xs <= Small (sm) */
 @media (max-width: 576px) {
   .container {
-    padding: 0 1rem;
+    padding: 0 .5rem;
   }
 
   .form__group {
@@ -171,7 +171,7 @@
   }
 
   .content__row {
-    padding: 1rem;
+    padding: .5rem;
   }
 
   .company__info {
@@ -267,6 +267,29 @@
   .container {
     max-width: 960px;
   }
+  .vacancies {
+    grid-template-columns: 1fr 1fr;
+  }
+  .vacancy__title {
+    font-weight: 600;
+    text-align: left;
+    border-bottom: 1px solid #f5f5f5;
+    padding: 8px 0;
+  }
+
+  .vacancy__descr {
+    margin-bottom: 16px;
+    border-bottom: 1px solid #f5f5f5;
+    padding: 8px 0;
+    text-align: justify;
+  }
+  .vacancy__descr:last-child {
+    grid-column: 1/3;
+    border: none;
+    text-align: center;
+  }
+
+
 }
 
 /* Extra large (xl) */
